--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <sonar.organization>pascalwo</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.coverage.exclusions>src/main/java/de.neuefische.backend/model</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>src/main/java/de.neuefische.backend/model/**,src/main/java/de.neuefische.backend/dto/**</sonar.coverage.exclusions>
         <java.version>17</java.version>
     </properties>
     <dependencies>
