--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,3 +1,5 @@
 spring.mongodb.embedded.version=3.5.5
 spring.data.mongodb.database=lapamealfactoryTestDB
+spoonacular-api-activ=false
+spoonacular.lapamealfactory.api.key=test123
 
