--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=${MONGO_DB_URI}
 spoonacular.lapamealfactory.api.key=${SPOONACULAR_API_KEY}
+neuefische.lapamealfactory.jwt.secret=${JWT_SECRET}
