--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -2,4 +2,5 @@ spring.mongodb.embedded.version=3.5.5
 spring.data.mongodb.database=lapamealfactoryTestDB
 spoonacular.lapamealfactory.api.key=test123
 neuefische.lapamealfactory.jwt.secret=supergeheimestestsecret
+spoona.api.baseurl=localhost:8484
 
